--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,6 +15,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        margin-bottom: 1rem; 
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
