--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,7 +15,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
-        margin-bottom: 1rem; 
+        margin-bottom: 1rem;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -25,12 +25,12 @@
   <body>
     <main>
       <div class="card">
-        <img src="./images/image-qr-code.png" alt="qr code" />
-        <h3 class="title">Improve your front-end skills by building projects</h3>
+        <img src="./images/image-qr-code.png" alt="qr code linking to Frontend Mentor" />
+        <h2 class="title">Improve your front-end skills by building projects</h2>
         <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </main>
 
-    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Yahya Sopian</a>.</div>
+    <footer class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Yahya Sopian</a>.</footer>
   </body>
 </html>
